--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "learning js",
   "main": "index.js",
   "dependencies": {
+    "editorconfig": "^0.15.0",
     "eslint": "^4.19.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-json": "^1.2.0",
-    "gitignore": "^0.6.0",
-    "prettier": "^1.11.1"
+    "eslint-plugin-json": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "npm run test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
