--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "learning js",
   "main": "index.js",
   "dependencies": {
-    "eslint": "^4.19.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-json": "^1.2.0"
+    "eslint": "4.19.0",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-json": "1.2.0",
+    "ts-lint": "4.5.1",
+    "tsconfig": "7.0.0",
+    "tslint": "5.9.1"
   },
   "devDependencies": {
-    "jest": "^22.4.2"
+    "jest": "22.4.2"
   },
   "scripts": {
     "test": "jest"
