setup project with JS & TS

--- a/TS/package.json
+++ b/TS/package.json
@@ -3,20 +3,17 @@
   "version": "1.0.0",
   "description": "learning ts",
   "main": "index.js",
-  "dependencies": {
-    "eslint": "4.19.0",
-    "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-json": "1.2.0",
-    "lodash": "^4.17.5",
-    "ts-lint": "4.5.1",
-    "tsconfig": "7.0.0",
-    "tslint": "5.9.1"
-  },
-  "devDependencies": {
-    "jest": "22.4.2"
-  },
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "editorconfig": "^0.15.0",
+    "lodash": "4.17.5"
+  },
+  "devDependencies": {
+    "tsconfig": "7.0.0",
+    "tslint": "5.9.1",
+    "jest": "22.4.2"
   },
   "repository": {
     "type": "git",
