--- a/JS/package.json
+++ b/JS/package.json
@@ -6,10 +6,7 @@
   "dependencies": {
     "eslint": "4.19.0",
     "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-json": "1.2.0",
-    "ts-lint": "4.5.1",
-    "tsconfig": "7.0.0",
-    "tslint": "5.9.1"
+    "eslint-plugin-json": "1.2.0"
   },
   "devDependencies": {
     "jest": "22.4.2"
