--- a/TS/package.json
+++ b/TS/package.json
@@ -7,13 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "editorconfig": "^0.15.0",
     "lodash": "4.17.5"
   },
   "devDependencies": {
-    "tsconfig": "7.0.0",
     "tslint": "5.9.1",
-    "jest": "22.4.2"
+    "jest": "22.4.2",
+    "typescript": "2.2.1"
   },
   "repository": {
     "type": "git",
